--- a/po/fr.po
+++ b/po/fr.po
@@ -1044,26 +1044,28 @@ msgstr "Rétablir : Coller"
 msgid "Redo typing"
 msgstr "Rétablir la frappe"
 
-#~ msgid "Patch Font"
-#~ msgstr "Police du patch"
-#~ msgid "Edit"
-#~ msgstr "Édition"
-#~ msgid "File"
-#~ msgstr "Fichier"
-#~ msgid "Media"
-#~ msgstr "Média"
-#~ msgid "Put"
-#~ msgstr "Ajouter"
-#~ msgid "Window"
-#~ msgstr "Fenêtre"
-#~ msgid "Text Editor"
-#~ msgstr "éditeur de texte..."
-#~ msgid "Preferences..."
-#~ msgstr "Préférences..."
-#~ msgid "Audio OFF"
-#~ msgstr "Audio OFF"
-#~ msgid "Audio ON"
-#~ msgstr "Audio ON"
-#~ msgid "Paths"
-#~ msgstr "Chemins..."
+msgid "Patch Font"
+msgstr "Police du patch"
+msgid "Edit"
+msgstr "Édition"
+msgid "File"
+msgstr "Fichier"
+msgid "Media"
+msgstr "Média"
+msgid "Put"
+msgstr "Ajouter"
+msgid "Window"
+msgstr "Fenêtre"
+msgid "Text Editor"
+msgstr "éditeur de texte..."
+msgid "Preferences..."
+msgstr "Préférences..."
+msgid "Audio OFF"
+msgstr "Audio OFF"
+msgid "Audio ON"
+msgstr "Audio ON"
+msgid "Paths"
+msgstr "Chemins..."
 
+msgid "Close this window?"
+msgstr "Fermer cette fenêtre?"
