--- a/po/zh_tw.po
+++ b/po/zh_tw.po
@@ -2,6 +2,7 @@
 # This file is put in the public domain.
 # 
 # Translators:
+# crazylion  <>, 2012.
 # Liwei Chou <>, 2012.
 # Pei-Wen Liu <vul3jp6p@gmail.com>, 2012.
 # 鴻旗 鄭 <>, 2012.
@@ -10,8 +11,8 @@ msgstr ""
 "Project-Id-Version: Pure Data\n"
 "Report-Msgid-Bugs-To: http://sourceforge.net/tracker/?group_id=55736&atid=478070\n"
 "POT-Creation-Date: 2012-01-17 18:37-0500\n"
-"PO-Revision-Date: 2012-01-23 18:19+0000\n"
-"Last-Translator: Pei-Wen Liu <vul3jp6p@gmail.com>\n"
+"PO-Revision-Date: 2012-01-30 07:27+0000\n"
+"Last-Translator: crazylion <>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -405,11 +406,11 @@ msgstr "儲存"
 
 #: ../tcl/dialog_iemgui.tcl:618
 msgid "X offset"
-msgstr ""
+msgstr "X軸位移"
 
 #: ../tcl/dialog_iemgui.tcl:621
 msgid "Y offset"
-msgstr ""
+msgstr "Y 軸位移"
 
 #: ../tcl/dialog_iemgui.tcl:653
 msgid "Colors"
@@ -757,7 +758,7 @@ msgstr "最小化"
 
 #: ../tcl/pd_menus.tcl:269 ../tcl/pd_menus.tcl:302 ../tcl/pd_menus.tcl:303
 msgid "Zoom"
-msgstr ""
+msgstr "放大"
 
 #: ../tcl/pd_menus.tcl:272 ../tcl/pd_menus.tcl:305 ../tcl/pd_menus.tcl:306
 msgid "Bring All to Front"
@@ -838,7 +839,7 @@ msgstr "離開"
 #: ../tcl/pdtk_canvas.tcl:389 ../tcl/pdtk_canvas.tcl:406
 #: ../tcl/pdtk_canvas.tcl:408
 msgid "Properties"
-msgstr ""
+msgstr "屬性"
 
 #: ../tcl/pdtk_canvas.tcl:202 ../tcl/pdtk_canvas.tcl:208
 #: ../tcl/pdtk_canvas.tcl:393 pd_dynamic_strings.tcl:16
@@ -950,7 +951,7 @@ msgstr ""
 
 #: iemgui_dynamic_strings.tcl:21
 msgid "height:"
-msgstr ""
+msgstr "高"
 
 #: iemgui_dynamic_strings.tcl:22
 msgid "hold:"
