--- a/po/de.po
+++ b/po/de.po
@@ -2,6 +2,7 @@
 # This file is put in the public domain.
 # 
 # Translators:
+# Hans-Christoph Steiner <hans@eds.org>, 2012.
 # Max Neupert <first_letter_of_name@maxneupert.de>, 2009.
 #   <maxneupert@gmail.com>, 2012.
 msgid ""
@@ -9,8 +10,8 @@ msgstr ""
 "Project-Id-Version: Pure Data\n"
 "Report-Msgid-Bugs-To: http://sourceforge.net/tracker/?group_id=55736&atid=478070\n"
 "POT-Creation-Date: 2012-01-17 18:37-0500\n"
-"PO-Revision-Date: 2012-01-27 16:10+0000\n"
-"Last-Translator: maxn <maxneupert@gmail.com>\n"
+"PO-Revision-Date: 2012-02-14 11:16+0000\n"
+"Last-Translator: Hans-Christoph Steiner <hans@eds.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -184,7 +185,7 @@ msgstr "Mehrere Geräte verwenden"
 
 #: ../tcl/dialog_canvas.tcl:121
 msgid "WARNING: unknown graphme flags received in pdtk_canvas_dialog"
-msgstr "WARNUNG: unbekannte graphme flags empfangen in pdtk_canvas_dialog"
+msgstr "WARNUNG: unbekannte graphme flags in pdtk_canvas_dialog empfangen"
 
 #: ../tcl/dialog_canvas.tcl:141
 msgid "Canvas Properties"
@@ -1120,5 +1121,3 @@ msgstr "Erneut einfügen"
 #: pd_dynamic_strings.tcl:39
 msgid "Redo typing"
 msgstr "Erneut eingeben"
-
-
