--- a/po/es_es.po
+++ b/po/es_es.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: Pure Data\n"
 "Report-Msgid-Bugs-To: http://sourceforge.net/tracker/?group_id=55736&atid=478070\n"
 "POT-Creation-Date: 2012-01-17 18:37-0500\n"
-"PO-Revision-Date: 2012-01-25 08:14+0000\n"
-"Last-Translator: drnn1076 <drnn_1076@hotmail.com>\n"
+"PO-Revision-Date: 2012-02-14 11:16+0000\n"
+"Last-Translator: Hans-Christoph Steiner <hans@eds.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -463,8 +463,7 @@ msgstr "Puertos de salida:"
 
 #: ../tcl/dialog_path.tcl:32
 msgid "Pd search path for objects, help, fonts, and other files"
-msgstr ""
-"Búsqueda Pd de localización para objetos, ayuda, fuentes y otros archivos"
+msgstr "Búsqueda Pd de localización para objetos, ayuda, fuentes y otros archivos"
 
 #: ../tcl/dialog_path.tcl:37
 msgid "Use standard extensions"
@@ -1124,5 +1123,3 @@ msgstr "Rehacer pegar"
 #: pd_dynamic_strings.tcl:39
 msgid "Redo typing"
 msgstr "Rehacer escritura"
-
-
