--- a/po/de.po
+++ b/po/de.po
@@ -3,6 +3,7 @@
 # 
 # Translators:
 # Hans-Christoph Steiner <hans@eds.org>, 2012.
+# Johannes Kolb <johannes.kolb@gmx.net>, 2012.
 # Max Neupert <first_letter_of_name@maxneupert.de>, 2009.
 #   <maxneupert@gmail.com>, 2012.
 msgid ""
@@ -10,14 +11,14 @@ msgstr ""
 "Project-Id-Version: Pure Data\n"
 "Report-Msgid-Bugs-To: http://sourceforge.net/tracker/?group_id=55736&atid=478070\n"
 "POT-Creation-Date: 2012-01-17 18:37-0500\n"
-"PO-Revision-Date: 2012-02-14 11:16+0000\n"
-"Last-Translator: Hans-Christoph Steiner <hans@eds.org>\n"
+"PO-Revision-Date: 2012-05-19 00:09+0000\n"
+"Last-Translator: Johannes Kolb <johannes.kolb@gmx.net>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: de\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../tcl/dialog_array.tcl:115 ../tcl/pd_menus.tcl:147 ../tcl/pd_menus.tcl:168
 msgid "Copy"
@@ -79,6 +80,10 @@ msgstr "Feld löschen"
 #: ../tcl/dialog_array.tcl:315
 msgid "Open List View..."
 msgstr "Öffne Listenanzeige..."
+
+#: ../tcl/scrollboxwindow.tcl:108
+msgid "Reset to Defaults"
+msgstr "Voreinstellungen zurücksetzen"
 
 #: ../tcl/dialog_array.tcl:322 ../tcl/dialog_audio.tcl:146
 #: ../tcl/dialog_canvas.tcl:208 ../tcl/dialog_find.tcl:163
@@ -488,8 +493,8 @@ msgid "Startup flags:"
 msgstr ""
 
 #: ../tcl/dialog_startup.tcl:91
-msgid "Defeat real-time scheduling"
-msgstr "Verhindere Echtzeit-Terminierung"
+msgid "Real-time scheduling"
+msgstr "Echtzeit Terminierung"
 
 #: ../tcl/helpbrowser.tcl:27
 msgid "Help Browser"
@@ -503,7 +508,7 @@ msgstr "(Tcl) UNGÜLTIGER BEFEHL NAME: "
 #: ../tcl/pd_connect.tcl:76 ../tcl/pd_connect.tcl:84 ../tcl/pdwindow.tcl:223
 #: ../tcl/pdwindow.tcl:234 ../tcl/pdwindow.tcl:318
 msgid "(Tcl) UNHANDLED ERROR: "
-msgstr ""
+msgstr "(Tcl) UNBERÜCKSICHTIGER FEHLER:"
 
 #: ../tcl/pd_guiprefs.tcl:153
 msgid "Cannot read GUI prefs file: "
