--- a/po/es_es.po
+++ b/po/es_es.po
@@ -7,19 +7,20 @@
 #   <lemonzi42@gmail.com>, 2012.
 #   <maxneupert@gmail.com>, 2012.
 #   <nicoauvieux@gmail.com>, 2012.
+#   <xelin32@hotmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Pure Data\n"
 "Report-Msgid-Bugs-To: http://sourceforge.net/tracker/?group_id=55736&atid=478070\n"
 "POT-Creation-Date: 2012-01-17 18:37-0500\n"
-"PO-Revision-Date: 2012-02-14 11:16+0000\n"
-"Last-Translator: Hans-Christoph Steiner <hans@eds.org>\n"
+"PO-Revision-Date: 2012-04-18 15:28+0000\n"
+"Last-Translator: jpa32 <xelin32@hotmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../tcl/dialog_array.tcl:115 ../tcl/pd_menus.tcl:147 ../tcl/pd_menus.tcl:168
 msgid "Copy"
@@ -81,6 +82,10 @@ msgstr "Eliminar matriz"
 #: ../tcl/dialog_array.tcl:315
 msgid "Open List View..."
 msgstr "Abrir vista de lista..."
+
+#: ../tcl/scrollboxwindow.tcl:108
+msgid "Reset to Defaults"
+msgstr "resetado por defecto"
 
 #: ../tcl/dialog_array.tcl:322 ../tcl/dialog_audio.tcl:146
 #: ../tcl/dialog_canvas.tcl:208 ../tcl/dialog_find.tcl:163
@@ -490,8 +495,8 @@ msgid "Startup flags:"
 msgstr "Banderas de inicio:"
 
 #: ../tcl/dialog_startup.tcl:91
-msgid "Defeat real-time scheduling"
-msgstr "Anular programación en tiempo real"
+msgid "Real-time scheduling"
+msgstr "programación en tiempo real "
 
 #: ../tcl/helpbrowser.tcl:27
 msgid "Help Browser"
