--- a/po/fr.po
+++ b/po/fr.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: Pure Data\n"
 "Report-Msgid-Bugs-To: http://sourceforge.net/tracker/?group_id=55736&atid=478070\n"
 "POT-Creation-Date: 2012-01-17 18:37-0500\n"
-"PO-Revision-Date: 2012-02-18 15:04+0000\n"
+"PO-Revision-Date: 2012-04-16 14:33+0000\n"
 "Last-Translator: Jean Sapristi <tom.javel@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: fr\n"
-"Plural-Forms: nplurals=2; plural=(n > 1)\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: ../tcl/dialog_array.tcl:115 ../tcl/pd_menus.tcl:147 ../tcl/pd_menus.tcl:168
 msgid "Copy"
@@ -78,6 +78,10 @@ msgstr "Supprimer le tableau"
 #: ../tcl/dialog_array.tcl:315
 msgid "Open List View..."
 msgstr "Voir la liste..."
+
+#: ../tcl/scrollboxwindow.tcl:108
+msgid "Reset to Defaults"
+msgstr "Valeurs par défaut"
 
 #: ../tcl/dialog_array.tcl:322 ../tcl/dialog_audio.tcl:146
 #: ../tcl/dialog_canvas.tcl:208 ../tcl/dialog_find.tcl:163
@@ -487,8 +491,8 @@ msgid "Startup flags:"
 msgstr "Options au démarrage :"
 
 #: ../tcl/dialog_startup.tcl:91
-msgid "Defeat real-time scheduling"
-msgstr "Débrayer l'ordonnanceur temps-réel"
+msgid "Real-time scheduling"
+msgstr "Ordonnancement temps réel"
 
 #: ../tcl/helpbrowser.tcl:27
 msgid "Help Browser"
