--- a/po/hu.po
+++ b/po/hu.po
@@ -3,20 +3,20 @@
 # 
 # Translators:
 # Andras Muranyi <muranyia@gmail.com>, 2009, 2010.
-#   <muranyia@gmail.com>, 2011.
+#   <muranyia@gmail.com>, 2011, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Pure Data\n"
 "Report-Msgid-Bugs-To: http://sourceforge.net/tracker/?group_id=55736&atid=478070\n"
 "POT-Creation-Date: 2012-01-17 18:37-0500\n"
-"PO-Revision-Date: 2012-01-19 14:31+0000\n"
-"Last-Translator: Hans-Christoph Steiner <hans@eds.org>\n"
-"Language-Team: Hungarian (http://www.transifex.net/projects/p/puredata/team/hu/)\n"
+"PO-Revision-Date: 2012-04-16 13:43+0000\n"
+"Last-Translator: muranyia <muranyia@gmail.com>\n"
+"Language-Team: Hungarian (http://www.transifex.com/projects/p/puredata/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: hu\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../tcl/dialog_array.tcl:115 ../tcl/pd_menus.tcl:147 ../tcl/pd_menus.tcl:168
 msgid "Copy"
@@ -78,6 +78,10 @@ msgstr "Tömböt töröl"
 #: ../tcl/dialog_array.tcl:315
 msgid "Open List View..."
 msgstr "Lista nézet megnyitása..."
+
+#: ../tcl/scrollboxwindow.tcl:108
+msgid "Reset to Defaults"
+msgstr "Vissza az alapbeállításokhoz"
 
 #: ../tcl/dialog_array.tcl:322 ../tcl/dialog_audio.tcl:146
 #: ../tcl/dialog_canvas.tcl:208 ../tcl/dialog_find.tcl:163
@@ -460,8 +464,7 @@ msgstr "Kimenő portok:"
 
 #: ../tcl/dialog_path.tcl:32
 msgid "Pd search path for objects, help, fonts, and other files"
-msgstr ""
-"A Pd keresési útvonala objektumokhoz, a súgóhoz, fontokhoz, és más fájlokhoz"
+msgstr "A Pd keresési útvonala objektumokhoz, a súgóhoz, fontokhoz, és más fájlokhoz"
 
 #: ../tcl/dialog_path.tcl:37
 msgid "Use standard extensions"
@@ -488,8 +491,8 @@ msgid "Startup flags:"
 msgstr "Indító paraméterek:"
 
 #: ../tcl/dialog_startup.tcl:91
-msgid "Defeat real-time scheduling"
-msgstr "Valós idejű ütemezés ki"
+msgid "Real-time scheduling"
+msgstr "Valós idejű ütemezés"
 
 #: ../tcl/helpbrowser.tcl:27
 msgid "Help Browser"
@@ -905,11 +908,11 @@ msgstr ""
 
 #: ../tcl/pdwindow.tcl:425
 msgid "IN"
-msgstr ""
+msgstr "BE"
 
 #: ../tcl/pdwindow.tcl:426
 msgid "OUT"
-msgstr ""
+msgstr "KI"
 
 #: ../tcl/wheredoesthisgo.tcl:18 ../tcl/wheredoesthisgo.tcl:19
 #, tcl-format
@@ -1121,5 +1124,3 @@ msgstr "Mégis beilleszt"
 #: pd_dynamic_strings.tcl:39
 msgid "Redo typing"
 msgstr "Mégis ír"
-
-
